--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="google-site-verification" content="KcY9AgCSabld-jTuurE9YBIV2pH0W5T1ACd0N4t1mPo">
   <link rel="manifest" href="/manifest.json">
   <title>Theta Wallet</title>
-  <link rel="stylesheet" href="Theta.wallet/wallet.thetatoken.org/static/css/\main.105e3a65.chunk.css">
+  <link rel="stylesheet" href="Theta.wallet/wallet.thetatoken.org/static/css/main.105e3a65.chunk.css">
 </head>
 
 <body class=""><noscript>You need to enable JavaScript to run this app.</noscript>
