--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="WalletPage__master-view">
             <div class="WalletTokenList"><a class="WalletTokenListItem WalletTokenListItem--is-active" aria-current="page" href="/wallet/tokens/theta">
                 <div class="WalletTokenListItem__token-container">
-                  <div class="WalletTokenListItem__active-indicator"></div><img src="/img/tokens/theta_large@2x.png" class="WalletTokenListItem__token-icon">
+                  <div class="WalletTokenListItem__active-indicator"></div><img src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tokens/theta_large@2x.png" class="WalletTokenListItem__token-icon">
                   <div class="WalletTokenListItem__token-balance-container">
                     <div class="WalletTokenListItem__token-name">Theta</div>
                     <div class="WalletTokenListItem__token-balance">0</div>
@@ -43,7 +43,7 @@
                 </div>
               </a><a class="WalletTokenListItem" href="/wallet/tokens/tfuel">
                 <div class="WalletTokenListItem__token-container">
-                  <div class="WalletTokenListItem__active-indicator"></div><img src="/img/tokens/tfuel_large@2x.png" class="WalletTokenListItem__token-icon">
+                  <div class="WalletTokenListItem__active-indicator"></div><img src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tokens/tfuel_large@2x.png" class="WalletTokenListItem__token-icon">
                   <div class="WalletTokenListItem__token-balance-container">
                     <div class="WalletTokenListItem__token-name">TFuel</div>
                     <div class="WalletTokenListItem__token-balance">0</div>
@@ -56,7 +56,7 @@
               <div class="PageHeader__title">Transactions</div>
 
             </div>
-            <div class="EmptyState"><img class="EmptyState__icon" src="/img/icons/empty-transactions@2x.png">
+            <div class="EmptyState"><img class="EmptyState__icon" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/icons/empty-transactions@2x.png">
               <div class="EmptyState__title">No Transactions</div>
             </div>
           </div>
