--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
           </div>
         </div>
       </div>
-      <div class="TabBar undefined"><a class="TabBarItem TabBarItem--is-active" href="/wallet/tokens" aria-current="page"><img class="TabBarItem__icon" alt="Wallet" src="/img/tab-bar/wallet@2x.png"><img class="TabBarItem__icon-active" alt="Wallet" src="/img/tab-bar/wallet-active@2x.png">
+      <div class="TabBar undefined"><a class="TabBarItem TabBarItem--is-active" href="/wallet/tokens" aria-current="page"><img class="TabBarItem__icon" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/wallet@2x.png"><img class="TabBarItem__icon-active" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/wallet-active@2x.png">
           <div class="TabBarItem__title">Wallet</div>
-        </a><a class="TabBarItem"><img class="TabBarItem__icon" alt="Send" src="/img/tab-bar/send@2x.png">
+        </a><a class="TabBarItem"><img class="TabBarItem__icon" alt="Send" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/send@2x.png">
           <div class="TabBarItem__title">Send</div>
-        </a><a class="TabBarItem"><img class="TabBarItem__icon" alt="Receive" src="/img/tab-bar/receive@2x.png">
+        </a><a class="TabBarItem"><img class="TabBarItem__icon" alt="Receive" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/receive@2x.png">
           <div class="TabBarItem__title">Receive</div>
-        </a><a class="TabBarItem" href="/wallet/stakes"><img class="TabBarItem__icon" alt="Stakes" src="/img/tab-bar/stakes@2x.png"><img class="TabBarItem__icon-active" alt="Stakes" src="/img/tab-bar/stakes-active@2x.png">
+        </a><a class="TabBarItem" href="/wallet/stakes"><img class="TabBarItem__icon" alt="Stakes" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/stakes@2x.png"><img class="TabBarItem__icon-active" alt="Stakes" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/stakes-active@2x.png">
           <div class="TabBarItem__title">Stakes</div>
         </a></div>
       <div class="Pages Pages--wallet">
@@ -64,8 +64,8 @@
       </div>
       <div></div>
       <div class="UnsupportedDevice">
-        <div class="UnsupportedDevice__content"><img class="UnsupportedDevice__logo" src="/img/logo/theta_wallet_logo@2x.png">
-          <div class="UnsupportedDevice__title">This wallet is designed for desktop. Try our mobile wallets!</div><a class="UnsupportedDevice__app-store-badge" href="https://itunes.apple.com/app/theta-wallet/id1451094550?mt=8" target="_blank"><img src="/img/badges/app-store@2x.png"></a><a class="UnsupportedDevice__app-store-badge" href="https://play.google.com/store/apps/details?id=org.theta.wallet" target="_blank"><img src="/img/badges/google-play@2x.png"></a>
+        <div class="UnsupportedDevice__content"><img class="UnsupportedDevice__logo" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/logo/theta_wallet_logo@2x.png">
+          <div class="UnsupportedDevice__title">This wallet is designed for desktop. Try our mobile wallets!</div><a class="UnsupportedDevice__app-store-badge" href="https://itunes.apple.com/app/theta-wallet/id1451094550?mt=8" target="_blank"><img src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/badges/app-store@2x.png"></a><a class="UnsupportedDevice__app-store-badge" href="https://play.google.com/store/apps/details?id=org.theta.wallet" target="_blank"><img src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/badges/google-play@2x.png"></a>
         </div>
       </div>
     </div>
