--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <div class="NavBar__account">
           <div class="NavBar__wallet">
             <div class="NavBar__wallet-title">My Wallet:</div>
-            <div class="NavBar__wallet-address">0x4DA33A69c5F72925BC3A0029c9445B9BaECBfc2B</div><a class="NavBar__wallet-copy-address-icon"><img src="/img/icons/copy@2x.png"></a>
+            <div class="NavBar__wallet-address">0x4DA33A69c5F72925BC3A0029c9445B9BaECBfc2B</div><a class="NavBar__wallet-copy-address-icon"><img src="https://theta-token.github.io/Theta.wallet/img/icons/copy@2x.png"></a>
           </div>
         </div>
       </div>
-      <div class="TabBar undefined"><a class="TabBarItem TabBarItem--is-active" href="/wallet/tokens" aria-current="page"><img class="TabBarItem__icon" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/wallet@2x.png"><img class="TabBarItem__icon-active" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/wallet-active@2x.png">
+      <div class="TabBar undefined"><a class="TabBarItem TabBarItem--is-active" href="/wallet/tokens" aria-current="page"><img class="TabBarItem__icon" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/icons/wallet@2x.png"><img class="TabBarItem__icon-active" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/wallet-active@2x.png">
           <div class="TabBarItem__title">Wallet</div>
-        </a><a class="TabBarItem"><img class="TabBarItem__icon" alt="Send" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/send@2x.png">
+        </a><a class="TabBarItem"><img class="TabBarItem__icon" alt="Send" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/icons/send@2x.png">
           <div class="TabBarItem__title">Send</div>
-        </a><a class="TabBarItem"><img class="TabBarItem__icon" alt="Receive" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/receive@2x.png">
+        </a><a class="TabBarItem"><img class="TabBarItem__icon" alt="Receive" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/icons/receive@2x.png">
           <div class="TabBarItem__title">Receive</div>
-        </a><a class="TabBarItem" href="/wallet/stakes"><img class="TabBarItem__icon" alt="Stakes" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/stakes@2x.png"><img class="TabBarItem__icon-active" alt="Stakes" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/stakes-active@2x.png">
+        </a><a class="TabBarItem" href="/wallet/stakes"><img class="TabBarItem__icon" alt="Stakes" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/icons/stakes@2x.png"><img class="TabBarItem__icon-active" alt="Stakes" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/stakes-active@2x.png">
           <div class="TabBarItem__title">Stakes</div>
         </a></div>
       <div class="Pages Pages--wallet">
