--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="root">
     <div class="App WalletApp">
       <div class="NavBar">
-        <div style="display: flex; flex-direction: column;"><img class="NavBar__logo" src="/img/logo/theta_wallet_logo@2x.png"><a class="NavBar__network-badge NavBar__network-badge--is-disabled">Mainnet</a></div>
+        <div style="display: flex; flex-direction: column;"><img class="NavBar__logo" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/logo/theta_wallet_logo@2x.png"><a class="NavBar__network-badge NavBar__network-badge--is-disabled">Mainnet</a></div>
         <div class="NavBar__account">
           <div class="NavBar__wallet">
             <div class="NavBar__wallet-title">My Wallet:</div>
@@ -21,7 +21,7 @@
           </div>
         </div>
       </div>
-      <div class="TabBar undefined"><a class="TabBarItem TabBarItem--is-active" href="/wallet/tokens" aria-current="page"><img class="TabBarItem__icon" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/icons/wallet@2x.png"><img class="TabBarItem__icon-active" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/tab-bar/wallet-active@2x.png">
+      <div class="TabBar undefined"><a class="TabBarItem TabBarItem--is-active" href="/wallet/tokens" aria-current="page"><img class="TabBarItem__icon" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/icons/wallet@2x.png"><img class="TabBarItem__icon-active" alt="Wallet" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/icons/wallet-active@2x.png">
           <div class="TabBarItem__title">Wallet</div>
         </a><a class="TabBarItem"><img class="TabBarItem__icon" alt="Send" src="https://theta-token.github.io/Theta.wallet/wallet.thetatoken.org/img/icons/send@2x.png">
           <div class="TabBarItem__title">Send</div>
