--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="NavBar__account">
           <div class="NavBar__wallet">
             <div class="NavBar__wallet-title">My Wallet:</div>
-            <div class="NavBar__wallet-address">0x4DA33A69c5F72925BC3A0029c9445B9BaECBfc2B</div><a class="NavBar__wallet-copy-address-icon"><img src="https://theta-token.github.io/Theta.wallet/img/icons/copy@2x.png"></a>
+            <div class="NavBar__wallet-address">0x4DA33A69c5F72925BC3A0029c9445B9BaECBfc2B</div>
           </div>
         </div>
       </div>
@@ -154,6 +154,7 @@
   </div>
   <div class="ReactModalPortal"></div>
   <div class="ReactModalPortal"></div>
+
 
 
 
