--- a/index.html
+++ b/index.html
@@ -104,7 +104,252 @@
 
 }
 
+.ModalOverlay{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: rgba(28,36,59,0.75);
+    cursor: pointer;
+}
 
+.Modal{
+    cursor: auto;
+}
+
+.Modal:focus {
+    outline: none;
+}
+
+.Modal__close-button{
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    height: 48px;
+    width: 48px;
+    transition: all 0.2s ease-in-out;
+    border-radius: 24px;
+    cursor: pointer;
+    background: #242F4B;
+    pointer-events: none;
+}
+
+.Modal__close-button img{
+    width: 48px;
+    height: 48px;
+}
+.SendModal{
+    display: flex;
+    flex-direction: column;
+    background-color: #242F4B;
+    width: 500px;
+    min-height: 540px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.SendModal__title{
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    color: white;
+    margin-bottom: 20px;
+}
+.TxForm{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.TxForm input{
+    width: 100%;
+}
+
+.TxForm select{
+    width: 100%;
+}
+
+.TxForm__entire-balance{
+    display: flex;
+    align-self: flex-start;
+    text-align: left;
+    color: white;
+    font-size: 13px;
+    cursor: pointer;
+    margin-left: 12px;
+}
+
+.TxForm__fee-container{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    height: 105px;
+    margin-bottom: 20px;
+}
+
+.TxForm__tx-fee-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.TxForm__gas-details-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.TxForm__toggle-gas-details{
+    font-size: 13px;
+    color: white;
+    margin-left: 12px;
+    cursor: pointer;
+}
+
+.TxForm .GradientButton{
+    margin-top: auto;
+}
+.FormInputContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 15px;
+}
+
+.FormInputContainer__title{
+    display: flex;
+    flex-direction: row;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 21px;
+    color: #92A2D6;
+}
+
+.FormInputContainer__input-container{
+    display: flex;
+    flex: 1;
+    width: 100%;
+}
+
+.FormInputContainer__error{
+    font-size: 13px;
+    font-weight: normal;
+    color: #ff1d25;
+    min-height: 15px;
+    margin-top: 4px;
+}
+
+.BottomBorderInput{
+    height: 34px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #687399;
+    font-size: 17px;
+    font-weight: 300;
+    background-color: transparent;
+    color: white;
+    border-radius: 0;
+}
+
+select {
+    /* for Firefox */
+    -moz-appearance: none;
+    /* for Chrome */
+    -webkit-appearance: none;
+
+    background: #fff url('/img/icons/arrow-down@2x.png') no-repeat;
+    background-size: 20px;
+    background-position:  right 10px center;
+    padding-right: 30px;
+}
+
+/* For IE10 */
+select::-ms-expand {
+    display: none;
+}
+
+.ValueWithTitle{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.ValueWithTitle__title{
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 21px;
+    color: #92A2D6;
+    text-align: left;
+}
+
+.ValueWithTitle__value{
+    font-size: 17px;
+    font-weight: normal;
+    line-height: 21px;
+    color: white;
+    text-align: left;
+}
+.UnsupportedDevice{
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: #1C243B;
+    position: absolute;
+    z-index: 1000000000;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.UnsupportedDevice__content{
+    display: flex;
+    flex-direction: column;
+    max-width: 374px;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.UnsupportedDevice__logo{
+    height: 34px;
+    align-self: center;
+}
+
+.UnsupportedDevice__title{
+    font-size: 23px;
+    font-weight: 100;
+    line-height: 36px;
+    margin-top: 32px;
+    text-align: center;
+    color: white;
+    margin-bottom: 22px;
+}
+
+.UnsupportedDevice__app-store-badge{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 22px;
+    cursor: pointer;
+}
+
+.UnsupportedDevice__app-store-badge img{
+    height: 54px;
+    align-self: center;
+}
+
+@media only screen and (max-width: 800px) {
+    .UnsupportedDevice{
+        display: flex;
+    }
+}
 </style>
 
   <div id="ReactModalPortal_Send"class="ReactModalPortal">
